--- a/hoverpass.cabal
+++ b/hoverpass.cabal
@@ -1,13 +1,13 @@
 name:                hoverpass
-version:             0.1.0.0
+version:             0.0.0.1
 -- synopsis:
--- description:
+description:         Overpass-API Wrapper on Haskell
 homepage:            https://github.com/wisn/hoverpass#readme
-license:             BSD3
+license:             MIT
 license-file:        LICENSE
 author:              Wisnu Adi Nurcahyo
 maintainer:          wisnu@nurcahyo.me
-copyright:           MIT
+copyright:           'Copyright: 2017 Wisnu Adi Nurcahyo'
 category:            API
 build-type:          Simple
 extra-source-files:  README.md
@@ -17,14 +17,6 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
-
-executable hoverpass-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , hoverpass
   default-language:    Haskell2010
 
 test-suite hoverpass-test
